# intreccio

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
content/: site.toml
content/00-pronuncia/: 001-vocali.html  001-vocali.meta.json  001-vocali.vocab.json  002-consonanti.html  002-consonanti.meta.json  003-pronomi.html  003-pronomi.meta.json  004-raddoppiamento.html  004-raddoppiamento.meta.json  chapter.toml
content/10-grammatica-base/: 001-articoli-determinativi.html  001-articoli-determinativi.meta.json  001-articoli-determinativi.vocab.json  002-articoli-indeterminativi.html  002-articoli-indeterminativi.meta.json  003-essere-stare.html  003-essere-stare.meta.json  004-avere.html  004-avere.meta.json  chapter.toml
content/20-roma-antica/: 001-roman-empire.html  001-roman-empire.meta.json  001-roman-empire.vocab.json  002-fragmentation.html  002-fragmentation.meta.json  002-fragmentation.vocab.json  chapter.toml
content/30-cucina-italiana/: 001-ingredienti.html  001-ingredienti.meta.json  001-ingredienti.vocab.json  002-tecniche.html  002-tecniche.meta.json  002-tecniche.vocab.json  003-pasta-sughi.html  003-pasta-sughi.meta.json  003-pasta-sughi.vocab.json  004-regionale.html  004-regionale.meta.json  004-regionale.vocab.json  005-cultura.html  005-cultura.meta.json  005-cultura.vocab.json  006-cucina-povera.html  006-cucina-povera.meta.json  007-dop-igp.html  007-dop-igp.meta.json  chapter.toml  vocabolario.html
content/36-ricette-tradizionali/: 001-carbonara-en.html  001-carbonara-en.meta.json  001-carbonara.html  001-carbonara.meta.json  (+1 more)
crates/site-gen/: Cargo.toml
crates/site-gen/src/: build.rs  config.rs  csp.rs  lib.rs  typography.rs
examples/: roman-empire-triglot.md
site/: _headers  index.html
src/: drills.rs  italian.rs  main.rs  serve.rs  tts.rs
templates/: base.html  chapter_index.html  fragment.html  site_index.html  weave.html
(+42 files in other folders)
