[package]
name = "site-gen"
version = "0.1.0"
edition = "2021"
description = "Chapter config, Tera-based page rendering, typography, and CSP checking for intreccio"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
toml = "0.8"
thiserror = "2"
weave = { path = "../weave" }

[dev-dependencies]
tempfile = "3"
